--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="footer-data-container">
       <div class="footer-col footer-col1">
         <div class="footer-col-heading">
-          Puls one
+          PlusOne
         </div>
         <div class="footer-col-text">
           <%= t :about_us_text %>
@@ -33,9 +33,9 @@
 
       </div>
       <div class="footer-col footer-col3">
-        <div class="footer-col-heading">
-          Instagram
-        </div>
+<!--        <div class="footer-col-heading">-->
+<!--          Instagram-->
+<!--        </div>-->
 <!--        <div class="footer-col-instagram-grid">-->
 <!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
 <!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
@@ -46,13 +46,13 @@
 <!--        </div>-->
       </div>
       <div class="footer-col footer-col4">
-        <div class="footer-col-heading">
-          Twitter
-        </div>
-        <div class="footer-col-twitter-hash-tag">
+<!--        <div class="footer-col-heading">-->
+<!--          Twitter-->
+<!--        </div>-->
+<!--        <div class="footer-col-twitter-hash-tag">-->
 
-          https://t.co/o3eGXK14AV
-        </div>
+<!--          https://t.co/o3eGXK14AV-->
+<!--        </div>-->
       </div>
     </div>
   </div>
