--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
       </div>
       </div>
       <div class="menu-item-right u-d-flex u-align-item-center">
-        <div class="phone-container">
+        <div class="phone-container" style="opacity: 0">
           <div class="icon-container ">
             <i class="fa fa-phone fa-rotate-270 fa-lg"></i>
             <span> Call US</span>
