--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -172,3 +172,8 @@ button[aria-expanded="true"]> i{
   z-index: 99;
   top: 30px;
 }
+.menu-flag{
+  height: 25px;
+  width: 40px;
+  border: 1px solid #ccc;
+}
