--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -11,6 +11,21 @@
         </div>
       </div>
     </section>
+  <section class="slider-three  <%= is_arabic? ? 'text-right-custom': '' %>">
+    <div class="slider-three-background-image-container">
+      <div class="slider-background-layer">
+        <div class="slider-two-text-container">
+          <div class="health-card-heading heading-white">
+            <%= t  :vision %>
+          </div>
+          <div class="health-card-text white-text-md">
+            <%= t  :vision_text %>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="quality-container mb-5 <%= is_arabic? ? 'text-right-custom': '' %>">
     <div class="quality-background-container">
       <div class="quality-left-side">
