--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -22,22 +22,20 @@
 
         <div class="reviews-review-right">
           <div class="reviews-heading-black heading-lg">
-           New York Department
+            Germany Office
           </div>
           <div class="reviews-review-right-top gray-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Aliquam commodi consequatur deleniti distinctio, enim, eveniet perferendis porro quasi quo
-            reprehenderit repudiandae sed sequi unde voluptatibus.
+
           </div>
           <div class="contact-page-bottom d-flex flex-wrap justify-content-between">
           <div class="reviews-review-right-bottom align-items-center">
            <i class="fa fa-mobile-phone active fa-4x"></i>
             <div class="ml-4">
               <div class="reviews-review-reviewer-name heading-md">
-                + 0800 2466 7921
+                +49 170 3365635
               </div>
               <div class="gray-text">
-                Office@Medigroup.com
+                info@plusone.expert
               </div>
             </div>
           </div>
@@ -45,10 +43,10 @@
               <i class="fa fa-map-marker active fa-4x"></i>
               <div class="ml-4">
                 <div class="reviews-review-reviewer-name heading-md">
-                  + 0800 2466 7921
+                  +49 170 3365635
                 </div>
                 <div class="gray-text">
-                  Office@Medigroup.com
+                  Monbijouplatz 3 b, 10178 Berlin
                 </div>
               </div>
             </div>
@@ -57,22 +55,20 @@
       </div>
       <div class="reviews-review-right mt-5">
         <div class="reviews-heading-black heading-lg">
-          Boston Department
+          Egypt Office
         </div>
         <div class="reviews-review-right-top gray-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Aliquam commodi consequatur deleniti distinctio, enim, eveniet perferendis porro quasi quo
-          reprehenderit repudiandae sed sequi unde voluptatibus.
+
         </div>
         <div class="contact-page-bottom d-flex flex-wrap justify-content-between">
           <div class="reviews-review-right-bottom align-items-center">
             <i class="fa fa-mobile-phone active fa-4x"></i>
             <div class="ml-4">
               <div class="reviews-review-reviewer-name heading-md">
-                + 0800 2466 7921
+                +20223588028
               </div>
               <div class="gray-text">
-                Office@Medigroup.com
+                info@plusone.expert
               </div>
             </div>
           </div>
@@ -80,10 +76,10 @@
             <i class="fa fa-map-marker active fa-4x"></i>
             <div class="ml-4">
               <div class="reviews-review-reviewer-name heading-md">
-                + 0800 2466 7921
+                +20223588028
               </div>
               <div class="gray-text">
-                Office@Medigroup.com
+                Villa 31, St12, Maadi, Cairo
               </div>
             </div>
           </div>
