--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -1,6 +1,18 @@
 <div class="padding-top-75 <%= is_arabic? ? 'text-right-custom': '' %>">
+  <section class="slider">
+    <div class="slider-back-image-container slider-back-image-container-faq">
+      <div class="slider-text-container">
+        <div class="slider-heading heading-lg p-4">
+          <%= t :faq %>
+        </div>
+        <div class="slider-text white-text">
+
+        </div>
+      </div>
+    </div>
+  </section>
   <h1 class="text-center mt-5 mb-5 ">
-    <%= t :faq %>
+
   </h1>
   <div class="container">
     <div class="accordion" id="accordionExample">
