--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,11 @@
         <div class="slider-text mt-2 mr-5 ml-5">
           <%=   t  :slider_one %>
         </div>
+        <a href="<%= contact_path%>">
         <button class="btns btns-submit mt-5">
           <%= t :ask_plus_one_expert %>
         </button>
+        </a>
       </div>
 
     </div>
@@ -24,9 +26,11 @@
         <div class="slider-text mt-2 mr-5 ml-5">
           <%= t  :slider_two %>
         </div>
+        <a href="<%= contact_path%>">
         <button class="btns btns-submit mt-5">
           <%= t :ask_plus_one_expert %>
         </button>
+        </a>
       </div>
     </div>
     <div class="slide">
@@ -38,9 +42,11 @@
         <div class="slider-text mt-2 mr-5 ml-5">
           <%= t  :slider_three %>
         </div>
+        <a href="<%= contact_path%>">
         <button class="btns btns-submit mt-5">
           <%= t :ask_plus_one_expert %>
         </button>
+        </a>
       </div>
     </div>
   </div>
@@ -90,21 +96,21 @@
       </div>
     </div>
   </section>
-  <section class="slider-three  <%= is_arabic? ? 'text-right-custom': '' %>">
-    <div class="slider-three-background-image-container">
-      <div class="slider-background-layer">
-      <div class="slider-two-text-container">
-        <div class="health-card-heading heading-white">
-          <%= t  :vision %>
-        </div>
-        <div class="health-card-text white-text-md">
-          <%= t  :vision_text %>
+<!--  <section class="slider-three  <%#= is_arabic? ? 'text-right-custom': '' %>">-->
+<!--    <div class="slider-three-background-image-container">-->
+<!--      <div class="slider-background-layer">-->
+<!--      <div class="slider-two-text-container">-->
+<!--        <div class="health-card-heading heading-white">-->
+          <%#= t  :vision %>
+<!--        </div>-->
+<!--        <div class="health-card-text white-text-md">-->
+          <%#= t  :vision_text %>
 
-        </div>
-      </div>
-      </div>
-    </div>
-  </section>
+<!--        </div>-->
+<!--      </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </section>-->
   <section class="slider-two  <%= is_arabic? ? 'text-right-custom': '' %>">
     <div class="slider-two-background-image-container">
       <div class="slider-background-layer">
@@ -217,63 +223,16 @@
     </div>
   </section>
 
-  <section class="slider-seven <%= is_arabic? ? 'text-right-custom': '' %>" style="direction: ltr">
-<!--    <div id="slideshow-2" class="sliders">-->
-<!--      <div class="active-slide slide">-->
-        <%#= image_tag "shutterstock_797358901.jpg", class:"image" %>
-<!--        <div class="slider-data-text">-->
-<!--          <div class="slider-heading-sm">-->
-            <%#= t  :step1 %>
-<!--          </div>-->
-<!--        </div>-->
-
-<!--      </div>-->
-<!--      <div class="slide">-->
-        <%#= image_tag "shutterstock_1005896620.jpg", class:"image" %>
-<!--        <div class="slider-data-text">-->
-<!--          <div class="slider-heading-sm">-->
-<!--            <%#= t  :step2%>.-->
-<!--          </div>-->
-
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="slide">-->
-        <%#= image_tag "shutterstock_1487997236.jpg", class:"image" %>
-<!--        <div class="slider-data-text">-->
-<!--          <div class="slider-heading-sm">-->
-<!--            <%#= t  :step3%>.-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="slide">-->
-        <%#= image_tag "shutterstock_1012561585.jpg", class:"image" %>
-<!--        <div class="slider-data-text">-->
-<!--          <div class="slider-heading-sm">-->
-<!--            <div class="btns btns-submit mt-4 text-center">-->
-              <%#= t  :learnMore %>
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
+  <section class="slider-seven <%= is_arabic? ? 'text-right-custom': '' %>" >
 
     <div class="slider-seven-background-image-container">
-      <div class="slider-two-text-container">
-<!--        <div class="health-card-heading">-->
-          <%#= t  :trustful_workflow %>
-<!--        </div>-->
-<!--        <div class="health-card-text mb-1 gray-text">-->
-<!--          <%#= t  :step1%>.-->
-<!--        </div>-->
-<!--        <div class="health-card-text mb-1 gray-text">-->
-<!--          <%#= t  :step2%>.-->
-<!--        </div>-->
-<!--        <div class="health-card-text mb-1 gray-text">-->
-<!--          <%#= t  :step3%>.-->
-<!--        </div>-->
+      <%=image_tag ('TheSlider.png'),class: 'slider-seven-image' %>
+      <div class="slider-two-text-container learn-more-button">
+        <a href="<%= contact_path%>">
         <div class="btns btns-submit mt-4 text-center">
           <%= t  :learnMore %>
         </div>
+        </a>
       </div>
     </div>
   </section>
@@ -284,9 +243,11 @@
         <div class="health-card-heading">
           <%= t  :seeking %>
         </div>
+        <a href="<%= contact_path%>">
         <div class="btns btns-submit mt-4 text-center">
           <%= t  :startHere %>
         </div>
+        </a>
       </div>
     </div>
   </section>
