--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,18 +4,20 @@
     <div class="menu-items-container u-d-flex u-justify-content-space-between u-flex-1">
       <div class="logo-container u-d-flex u-justify-content-center">
         <div class="header-img-color">
+          <a href="<%= root_path %>">
           <%=image_tag 'logoWhi.png', class: 'logo-img' %>
+          </a>
         </div>
 <!--        <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image">-->
       </div>
       <div class="menu-items-center u-flex-1 menu-item-mob">
       <div class="menu-items u-d-flex ">
-        <div class="menu-item active">
+        <div class="menu-item <%= params[:action] === 'index' ? 'active': nil %>" >
          <a href="<%= root_path %>"> <%= t :home %> </a>
         </div>
 <!--        <div class="menu-item">Treatment</div>-->
-        <div class="menu-item"><a href="<%= about_path %>"><%= t :about_us %> </a></div>
-        <div class="menu-item"><a href="<%= contact_path%>"><%= t :contact %> </a></div>
+        <div class="menu-item <%= params[:action] === 'about' ? 'active': nil %>"><a href="<%= about_path %>"><%= t :about_us %> </a></div>
+        <div class="menu-item <%= params[:action] === 'contact' ? 'active': nil %>"><a href="<%= contact_path%>"><%= t :contact %> </a></div>
       </div>
       </div>
       <div class="menu-item-right u-d-flex u-align-item-center">
@@ -28,7 +30,7 @@
         </div>
 
         <div class="depricon-icon menu-item-icon">
-          <i class="fa fa-bars"></i>
+         <%=image_tag (is_arabic? ? 'egypt-flag-xs.png' : 'english-flag-small.png') ,class: 'menu-flag'%>
         </div>
         <div>
           <select class="language-controller language-change" id="language-change">
@@ -68,6 +70,8 @@
       </ul>
     </div>
     <div class="align-right">
+      <%=image_tag (is_arabic? ? 'egypt-flag-xs.png' : 'english-flag-small.png') ,class: 'menu-flag'%>
+
       <select class="language-controller language-change" id="language-change">
 
         <option value="en">English</option>
