--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -42,7 +42,7 @@
         <div class="ajax-button appointment-form-button">
           <div class="fa fa-check fa-customize done"></div>
           <div class="fa fa-close fa-customize failed" style="color:red !important;"></div>
-          <%= f.submit "Save Changes", class: "btn btn-primary submit", id: "submit" %>
+          <%= f.submit "Send Inquiry", class: "btns btns-submit btn-primary submit", id: "submit" %>
         </div>
     <% end %>
   </div>
