--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,7 +19,8 @@
       </div>
       <div class="footer-col footer-col2">
         <div class="footer-col-heading">
-          <%= t :useful_link %>
+          <%#= t :useful_link %>
+          &nbsp;
         </div>
         <a class="footer-col-link" href="/">
           <div class="footer-col-link footer-col-link1"><%= t :home %></div></a>
