--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <div class="menu-bar u-d-flex u-align-item-center d-done-at-md u-justify-content-space-between">
+  <div class="menu-bar u-d-flex u-align-item-center d-done-at-md u-justify-content-space-between <%= is_arabic? ? 'text-right-custom': '' %>">
 
     <div class="menu-items-container u-d-flex u-justify-content-space-between u-flex-1">
       <div class="logo-container u-d-flex u-justify-content-center">
