--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -49,7 +49,7 @@
       margin-bottom: 25px;
     }
     &-link{
-      text-transform: uppercase;
+      //text-transform: uppercase;
       letter-spacing: 0.35px;
       padding-bottom: 14px;
       line-height: 22px;
