--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -177,3 +177,13 @@ button[aria-expanded="true"]> i{
   width: 40px;
   border: 1px solid #ccc;
 }
+.text-right-custom .header-img-color{
+   left: auto;
+   right: 70px;
+  @media only screen and (min-width:1440px) {
+    right: 80px;
+      }
+  @media only screen and (max-width: 1100px){
+    right: 0;
+  }
+ }
