--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -30,7 +30,7 @@
         </div>
 
         <div class="depricon-icon menu-item-icon">
-         <%=image_tag (is_arabic? ? 'egypt-flag-xs.png' : 'english-flag-small.png') ,class: 'menu-flag'%>
+         <%=image_tag (is_arabic? ? 'egypt-flag-xs.png' : 'united-states-of-america-flag-xs.png') ,class: 'menu-flag'%>
         </div>
         <div>
           <select class="language-controller language-change" id="language-change">
@@ -70,7 +70,7 @@
       </ul>
     </div>
     <div class="align-right">
-      <%=image_tag (is_arabic? ? 'egypt-flag-xs.png' : 'english-flag-small.png') ,class: 'menu-flag'%>
+      <%=image_tag (is_arabic? ? 'egypt-flag-xs.png' : 'united-states-of-america-flag-xs.png') ,class: 'menu-flag'%>
 
       <select class="language-controller language-change" id="language-change">
 
