--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -96,3 +96,13 @@
 .iti-arrow{
   display: none;
 }
+.btn-link-an{
+  & a{
+    text-decoration: none;
+    color: inherit;
+    &:hover{
+      text-decoration: none;
+      color: inherit;
+    }
+  }
+}
