making changes in arabic

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
         <div class="slider-heading">
           <%= t :second_opinion %>
         </div>
-        <div class="slider-text mt-2 mr-5 ml-5">
+        <div class="slider-text mt-2 mr-5 ml-5" style="direction: rtl">
           <%=   t  :slider_one %>
         </div>
         <a href="<%= contact_path%>">
@@ -23,7 +23,7 @@
         <div class="slider-heading">
           <%= t  :second_opinion %>
         </div>
-        <div class="slider-text mt-2 mr-5 ml-5">
+        <div class="slider-text mt-2 mr-5 ml-5" style="direction: rtl">
           <%= t  :slider_two %>
         </div>
         <a href="<%= contact_path%>">
@@ -39,7 +39,7 @@
         <div class="slider-heading">
           <%= t :second_opinion %>
         </div>
-        <div class="slider-text mt-2 mr-5 ml-5">
+        <div class="slider-text mt-2 mr-5 ml-5" style="direction: rtl">
           <%= t  :slider_three %>
         </div>
         <a href="<%= contact_path%>">
