arabic text changes

--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -31,14 +31,14 @@
               يوفر PlusOne  بلس وان للمرضى القدرة على الحصول على رأي خبير طبي عالمي. ويمكنك أيضًا طلب الحصول على خدماتنا من خلال طبيبك المعالج أو مديري الحالات لدينا الذين هم أطباء مؤهلون أيضًا.
               قم باستشارة أحد الخبراء من هنا
               <span class="btns btns-submit btn-link-an"style="padding: 10px ">
-                <a href="contact">
-            <%= t :ask_plus_one_expert %>
+                <a href="/contact">
+            <%= t :ask_plus_one_expert %></a>
               </span>
               وسيقوم فريقنا بالرد عليك خلال يومين عمل
             <% else %>
               PlusOne gives patients the ability to get a Second Opinion from world-renowned experts. You can also request to receive our services through your treating doctor or our Case Managers who are qualified physicians themselves. Get your Second Opinion by starting here
               <span class="btns btns-submit btn-link-an" style="padding: 10px 10px">
-                <a href="contact">Ask PlusOne Expert</a> </span>Our team will get back to you within two business days?
+                <a href="/contact">Ask PlusOne Expert</a> </span>Our team will get back to you within two business days?
             <% end %>
           </div>
         </div>
