--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -29,7 +29,7 @@
           </div>
           <div class="contact-page-bottom d-flex flex-wrap justify-content-between">
           <div class="reviews-review-right-bottom align-items-center">
-           <i class="fa fa-mobile-phone active fa-4x"></i>
+           <i class="fa fa-mobile-phone m-1 active fa-4x"></i>
             <div class="ml-4">
               <div class="reviews-review-reviewer-name heading-md">
                 +49 170 3365635
@@ -40,7 +40,7 @@
             </div>
           </div>
             <div class="reviews-review-right-bottom align-items-center">
-              <i class="fa fa-map-marker active fa-4x"></i>
+              <i class="fa fa-map-marker m-1 active fa-4x"></i>
               <div class="ml-4">
                 <div class="reviews-review-reviewer-name heading-md">
                   +49 170 3365635
@@ -62,7 +62,7 @@
         </div>
         <div class="contact-page-bottom d-flex flex-wrap justify-content-between">
           <div class="reviews-review-right-bottom align-items-center">
-            <i class="fa fa-mobile-phone active fa-4x"></i>
+            <i class="fa fa-mobile-phone active m-1 fa-4x"></i>
             <div class="ml-4">
               <div class="reviews-review-reviewer-name heading-md">
                 +20223588028
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="reviews-review-right-bottom align-items-center">
-            <i class="fa fa-map-marker active fa-4x"></i>
+            <i class="fa fa-map-marker active m-1 fa-4x"></i>
             <div class="ml-4">
               <div class="reviews-review-reviewer-name heading-md">
                 +20223588028
