--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,14 +8,7 @@
         <div class="footer-col-text">
           <%= t :about_us_text %>
         </div>
-        <div class="footer-socail-link">
-          <i class="fa fa-facebook footer-icon"></i>
-          <i class="fa fa-instagram footer-icon"></i>
-          <i class="fa fa-youtube footer-icon"></i>
-<!--          <i class="fa fa-twitter footer-icon" ></i>-->
-<!--          <i class="fa fa-google-plus footer-icon"></i>-->
-<!--          <i class="fa fa-pinterest footer-icon"></i>-->
-        </div>
+
       </div>
       <div class="footer-col footer-col2">
         <div class="footer-col-heading">
@@ -47,6 +40,17 @@
 <!--        </div>-->
       </div>
       <div class="footer-col footer-col4">
+        <div class="footer-col-heading">
+                    &nbsp;
+                  </div>
+        <div class="footer-socail-link">
+          <i class="fa fa-facebook footer-icon"></i>
+          <i class="fa fa-instagram footer-icon"></i>
+          <i class="fa fa-youtube footer-icon"></i>
+          <!--          <i class="fa fa-twitter footer-icon" ></i>-->
+          <!--          <i class="fa fa-google-plus footer-icon"></i>-->
+          <!--          <i class="fa fa-pinterest footer-icon"></i>-->
+        </div>
 <!--        <div class="footer-col-heading">-->
 <!--          Twitter-->
 <!--        </div>-->
