--- a/app/assets/stylesheets/slider.scss
+++ b/app/assets/stylesheets/slider.scss
@@ -25,6 +25,9 @@
     @media only screen and (max-width:786px) {
       height: 100vh;
       background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   &-back-image-container-contact{
@@ -35,6 +38,9 @@
     @media only screen and (max-width:786px) {
       height: 100vh;
       background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
@@ -48,6 +54,19 @@
     max-width: 100vw;
     overflow: hidden;
     background-color: rgba(0,0,0,.4);
+    @media only screen and (max-width: 768px) {
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+      position: initial;
+      transform: none;
+      left: auto;
+      top: initial;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
   }
   &-heading{
     color: #fff;
@@ -81,6 +100,21 @@
     overflow: hidden;
     //width: 80vh;
     min-width: 300px;
+    @media only screen and (max-width: 786px) {
+      position: absolute;
+      justify-content: flex-start;
+      align-items: center;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      transform: none;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding-top: 40px;
+    }
 
   }
   &-heading{
@@ -89,7 +123,7 @@
     font-weight: 500;
     //white-space: nowrap;
     @media only screen and(max-width: 768px) {
-      white-space: pre-wrap;
+      white-space: normal;
       font-size: 50px;
       line-height: 40px;
     }
