all ui know issues fixed

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer  <%= is_arabic? ? 'text-right-custom': '' %>" >
   <div class="footer-container-inner">
     <div class="footer-data-container">
       <div class="footer-col footer-col1">
