--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -30,12 +30,15 @@
     }
     @media only screen and (max-width: 500px)  {
       flex-direction: column;
+      //justify-content: flex-start;
     }
     &-left{
       flex: 0 0 48%;
+      max-height: 50px;
     }
     &-right{
       flex: 0 0 48%;
+      max-height: 50px;
     }
     &-text-area{
       width: 100%;
