--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,6 +12,7 @@
     box-shadow: 0 0 35px 5px #dceff8;
     width: 100%;
     margin: auto;
+    height: 660px;
     justify-content: space-between;
     max-width: 1440px;
     transform: translateY(-20%);
@@ -23,6 +24,7 @@
       transform: translateY(-40%);
       flex-direction: row;
       width: 100%;
+      height: 220px;
     }
     @media only screen and (min-width: 1100px) {
       width: 85%;
@@ -41,25 +43,31 @@
     align-items: center;
     border-right: 1px dashed #cccccc;
     flex: 1;
-    flex-direction: column;
+    //height: 220px;
+    flex-direction:   column;
+    //justify-content: center;
     @media only screen and (max-width: 800px) {
       border-bottom:1px dashed #cccccc;
       border-right: none;
-
+      margin: 0;
+      padding: 40px;
     }
     &:last-child{
       border-right: none;
       border-bottom: none;
     }
+    @media only screen and (max-width: 500px){
+      height: 220px;
+    }
   }
   &-icon{
     flex: 0 0 35%;
     margin-bottom: 15px;
+    height: 100px;
   }
   &-detail{
     flex: 0 0 65%;
-    //padding: 10px 50px 10px 0px;
-    //border-right: 1px dashed #cccccc;
+    height: 120px;
     @media only screen and (max-width: 800px) {
      border-right: none;
     }
