--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
         <div class="slider-heading">
           <%= t :second_opinion %>
         </div>
-        <div class="slider-text mt-2 mr-5 ml-5 text-right-custom">
+        <div class="slider-text mt-2 mr-5 ml-5 <%= is_arabic? ? 'text-right-custom': '' %>">
           <%=   t  :slider_one %>
         </div>
         <a href="<%= contact_path%>">
@@ -23,7 +23,7 @@
         <div class="slider-heading">
           <%= t  :second_opinion %>
         </div>
-        <div class="slider-text mt-2 mr-5 ml-5 text-right-custom">
+        <div class="slider-text mt-2 mr-5 ml-5 <%= is_arabic? ? 'text-right-custom': '' %>">
           <%= t  :slider_two %>
         </div>
         <a href="<%= contact_path%>">
@@ -39,7 +39,7 @@
         <div class="slider-heading">
           <%= t :second_opinion %>
         </div>
-        <div class="slider-text mt-2 mr-5 ml-5 text-right-custom">
+        <div class="slider-text mt-2 mr-5 ml-5 <%= is_arabic? ? 'text-right-custom': '' %>">
           <%= t  :slider_three %>
         </div>
         <a href="<%= contact_path%>">
@@ -50,8 +50,8 @@
       </div>
     </div>
   </div>
-  <section class="services-section  <%= is_arabic? ? 'text-right-custom': '' %>" style="direction: ltr">
-    <div class="services-container">
+  <section class="services-section  <%= is_arabic? ? 'text-right-custom': '' %>" style="direction: ltr;">
+    <div class="services-container" >
       <div class="services-item">
         <div class="services-icon">
           <%=image_tag  'WorldRenownExperts.png', class:'services-image-icons'%>
