--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -14,6 +14,7 @@
   <h1 class="text-center mt-5 mb-5 ">
 
   </h1>
+
   <div class="container">
     <div class="accordion" id="accordionExample">
       <div class="card">
@@ -38,7 +39,7 @@
             <% else %>
               PlusOne gives patients the ability to get a Second Opinion from world-renowned experts. You can also request to receive our services through your treating doctor or our Case Managers who are qualified physicians themselves. Get your Second Opinion by starting here
               <span class="btns btns-submit btn-link-an" style="padding: 10px 10px">
-                <a href="/contact">Ask PlusOne Expert</a> </span>Our team will get back to you within two business days?
+                <a href="/contact">Ask PlusOne Expert</a> </span>Our team will get back to you within two business days.
             <% end %>
           </div>
         </div>
@@ -71,51 +72,52 @@
           </div>
         </div>
       </div>
-    </div>
+
   <div class="card">
-    <div class="card-header card-header-custom" id="headingOne">
+    <div class="card-header card-header-custom" id="headingFour">
       <h2 class="mb-0">
-        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsefour" aria-expanded="true" aria-controls="collapseOne">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
           <%= t :Q4 %>
         </button>
       </h2>
     </div>
 
-    <div id="collapsefour" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
       <div class="card-body">
         <%= t :Q4Ans %>
       </div>
     </div>
   </div>
   <div class="card">
-    <div class="card-header card-header-custom" id="headingOne">
+    <div class="card-header card-header-custom" id="headingFive">
       <h2 class="mb-0">
-        <button class="btn btn-link btn-plus-button" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseOne">
+        <button class="btn btn-link btn-plus-button" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
           <%= t :Q5 %>
         </button>
       </h2>
     </div>
 
-    <div id="collapseSix" class="collapse " aria-labelledby="headingOne" data-parent="#accordionExample">
+    <div id="collapseFive" class="collapse " aria-labelledby="headingFive" data-parent="#accordionExample">
       <div class="card-body">
         <%= t :Q5Ans %>
       </div>
     </div>
   </div>
   <div class="card">
-    <div class="card-header card-header-custom" id="headingOne">
+    <div class="card-header card-header-custom" id="headingSeven">
       <h2 class="mb-0">
-        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseOne">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven">
           <%= t :Q6 %>
         </button>
       </h2>
     </div>
 
-    <div id="collapseSeven" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
       <div class="card-body">
         <%= t :Q6Ans %>
       </div>
     </div>
+  </div>
   </div>
   </div>
   <div class="padding-top-75">
