--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -24,6 +24,8 @@
         </a>
         <a class="footer-col-link" href="<%= faq_path %>">
           <div class="footer-col-link footer-col-link4"> <%= t :faq %></div></a>
+        <div class="footer-col-link footer-col-link4"> <%= t :Privacy %></div>
+        <div class="footer-col-link footer-col-link4"> <%= t :Terms %></div>
 
       </div>
       <div class="footer-col footer-col3">
