--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -29,7 +29,7 @@
       </div>
       <div class="appointment-form-row appointment-form-phone">
         <%#= f.telephone_field :phone, id: 'phone', class: 'home-form-input', placeholder: "#{t :Phone}" %>
-        <%= f.select :phone, [ 'Egypt: 0020', 'Saudi Arabia: 00966', 'Kuwait: 00965', 'United Arab Emirates: 00971', 'Qatar: 00974', 'Bahrain: 00973', 'Oman: 00968', 'Jordan: 00962', 'Yemen: 00967', 'Iraq: 00964', 'Lebanon: 00961', 'Algeria: 00213', 'Tunisia: 00216', 'Libya: 00218', 'Morocco: 00212' ], :prompt => 'Select One' %>
+        <%= f.select :phone, ['Egypt: 0020', 'Saudi Arabia: 00966', 'Kuwait: 00965', 'United Arab Emirates: 00971', 'Qatar: 00974', 'Bahrain: 00973', 'Oman: 00968', 'Jordan: 00962', 'Yemen: 00967', 'Iraq: 00964', 'Lebanon: 00961', 'Algeria: 00213', 'Tunisia: 00216', 'Libya: 00218', 'Morocco: 00212' ], {prompt: 'Choose country code'}, { class: 'home-form-input', } %>
             </div>
       <div class="appointment-form-row">
         <div class="appointment-form-row-text-area">
