--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -62,7 +62,9 @@
       //text-align: center;
       &:hover{
         color: #00a0f0;
-
+      }
+      @media only screen and (max-width: 786px) {
+        margin-left: 0;
       }
     }
     &-twitter-hash-tag{
