--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -103,6 +103,7 @@
   & a{
     text-decoration: none;
     color: inherit;
+    display: inline-block;
     &:hover{
       text-decoration: none;
       color: inherit;
