--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -527,6 +527,7 @@
     //color: #000;
     font-weight: 500;
     padding: 3px;
+    text-align: inherit;
     &:hover{
       color: #000;
       text-decoration: none;
