--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -69,17 +69,17 @@
   padding-right: 20px;
   border-right: 1px dashed #ccc;
   white-space: nowrap;
+  @media only screen and (max-width: 900px) {
+    max-width: 80px;
+    z-index: -9;
+  }
 }
 .logo-img{
   height: 70px;
-
-
-
 }
 .header-img-color{
   background-color: #1C9FF0;
   height: 100px;
-  //width: 85px;
   padding: 10px;
   position: absolute;
   top: 0;
@@ -89,6 +89,9 @@
   }
   @media only screen and (max-width: 1100px){
     left: 0;
+  }
+  @media only screen and (max-width: 767px) {
+    display: none;
   }
 }
 .header-img-color-md{
@@ -106,7 +109,6 @@
 }
 .logo-image-md{
   height: 100%;
-  //width: 100%;
 }
 .nav-bar-mobile{
   min-height: 85px;
@@ -169,13 +171,17 @@ button[aria-expanded="true"]> i{
 .align-right{
   position: absolute;
   right: 15px;
-  z-index: 99;
+  z-index: 98;
   top: 30px;
 }
 .menu-flag{
   height: 25px;
   width: 40px;
   border: 1px solid #ccc;
+  @media only screen and (max-width: 420px) {
+    width: 20px;
+    height: 15px;
+  }
 }
 .text-right-custom .header-img-color{
    left: auto;
