--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -22,7 +22,7 @@
 
         <div class="reviews-review-right">
           <div class="reviews-heading-black heading-lg">
-            Germany Office
+            <%= t :germny %>
           </div>
           <div class="reviews-review-right-top gray-text">
 
@@ -31,9 +31,9 @@
           <div class="reviews-review-right-bottom align-items-center">
            <i class="fa fa-mobile-phone m-1 active fa-4x"></i>
             <div class="ml-4">
-              <div class="reviews-review-reviewer-name heading-md">
-                +49 170 3365635
-              </div>
+<!--              <div class="reviews-review-reviewer-name heading-md">-->
+<!--                +49 170 3365635-->
+<!--              </div>-->
               <div class="gray-text">
                 info@plusone.expert
               </div>
@@ -42,9 +42,9 @@
             <div class="reviews-review-right-bottom align-items-center">
               <i class="fa fa-map-marker m-1 active fa-4x"></i>
               <div class="ml-4">
-                <div class="reviews-review-reviewer-name heading-md">
-                  +49 170 3365635
-                </div>
+<!--                <div class="reviews-review-reviewer-name heading-md">-->
+<!--                  +49 170 3365635-->
+<!--                </div>-->
                 <div class="gray-text">
                   Monbijouplatz 3 b, 10178 Berlin
                 </div>
@@ -55,7 +55,7 @@
       </div>
       <div class="reviews-review-right mt-5">
         <div class="reviews-heading-black heading-lg">
-          Egypt Office
+          <%= t :egypt  %>
         </div>
         <div class="reviews-review-right-top gray-text">
 
@@ -64,9 +64,9 @@
           <div class="reviews-review-right-bottom align-items-center">
             <i class="fa fa-mobile-phone active m-1 fa-4x"></i>
             <div class="ml-4">
-              <div class="reviews-review-reviewer-name heading-md">
-                +20223588028
-              </div>
+<!--              <div class="reviews-review-reviewer-name heading-md">-->
+<!--                +20223588028-->
+<!--              </div>-->
               <div class="gray-text">
                 info@plusone.expert
               </div>
@@ -75,9 +75,9 @@
           <div class="reviews-review-right-bottom align-items-center">
             <i class="fa fa-map-marker active m-1 fa-4x"></i>
             <div class="ml-4">
-              <div class="reviews-review-reviewer-name heading-md">
-                +20223588028
-              </div>
+<!--              <div class="reviews-review-reviewer-name heading-md">-->
+<!--                +20223588028-->
+<!--              </div>-->
               <div class="gray-text">
                 Villa 31, St12, Maadi, Cairo
               </div>
