"email/phone field fixed"

--- a/app/views/user_mailer/booking_confirmation.html.erb
+++ b/app/views/user_mailer/booking_confirmation.html.erb
@@ -1,7 +1,5 @@
-<h1>Booking Confirmation</h1>
+<h1>Booking Request</h1>
 
 <h3>
-Hi  <%= @booking.first_name %> <span style="margin-left: 3px;"> </span> <%= @booking.second_name %>
+  Hi Admin! You have recieved new booking request from <%= @booking.first_name %> <span style="margin-left: 3px;"> </span> <%= @booking.second_name %>
 </h3>
-
-<p>Your Booking is Confirmed</p>
