--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -29,9 +29,17 @@
       </div>
       <div class="form-group">
         <%#= f.telephone_field :phone, id: 'phone', class: 'home-form-input', placeholder: "#{t :Phone}" %>
-        <%= f.select :country_name, ['Egypt', 'Saudi Arabia', 'Kuwait', 'United Arab Emirates', 'Qatar', 'Bahrain', 'Oman', 'Jordan', 'Yemen', 'Iraq', 'Lebanon', 'Algeria', 'Tunisia', 'Libya', 'Morocco' ] %>
-        <%= f.text_field :country_code, id: "country-code", value: "0020",disabled: true %>
-        <%= f.text_field :phone %>
+        <div class="appointment-form-row">
+          <div class="appointment-form-row-left">
+
+          <%= f.select :country_name, ['Egypt', 'Saudi Arabia', 'Kuwait', 'United Arab Emirates', 'Qatar', 'Bahrain', 'Oman', 'Jordan', 'Yemen', 'Iraq', 'Lebanon', 'Algeria', 'Tunisia', 'Libya', 'Morocco' ],{},{class:'home-form-input'} %>
+          </div>
+          <div class="appointment-form-row-right">
+        <%= f.text_field :country_code, id: "country-code", value: "0020",disabled: true ,class:"home-form-input"%>
+          </div>
+        </div>
+          <%= f.text_field :phone ,{required:true,class:'home-form-input'}%>
+
 
       </div>
       <div class="appointment-form-row">
