--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,8 +17,11 @@
     max-width: 1440px;
     transform: translateY(-20%);
     flex-direction: column;
+    overflow: hidden;
     @media only screen and (min-width: 600px) {
-      width: 60%;
+      width: 100%;
+      flex-direction: row;
+      height: 350px;
     }
     @media only screen and (min-width: 800px) {
       transform: translateY(-40%);
@@ -29,7 +32,10 @@
     @media only screen and (min-width: 1100px) {
       width: 85%;
     }
-
+    @media only screen and (max-height: 450px) , screen and (min-width: 600px){
+      transform: translateY(0%);
+      margin-bottom: 50px;
+    }
 
   }
   &-image-icons{
@@ -46,7 +52,12 @@
     //height: 220px;
     flex-direction:   column;
     //justify-content: center;
-    @media only screen and (max-width: 800px) {
+    @media only screen and (max-width: 780px) {
+      margin: 25px 10px 30px;
+
+      padding: 40px;
+    }
+    @media only screen and (max-width: 600px) {
       border-bottom:1px dashed #cccccc;
       border-right: none;
       margin: 0;
@@ -87,6 +98,11 @@
     letter-spacing: 0px;
     text-transform: none;
     //direction: rtl;
+    @media only screen and (max-height: 450px) , screen and (min-width: 600px){
+      font-size: 18px;
+      line-height: normal;
+      width: 100%;
+    }
   }
   &-text{
     color: #828282;
